Hopefully fixed UI test